# svd-manifolds

./: .gitignore  README.md  Untitled.ipynb  collect_activations.py  dataset_gathering.ipynb  download_from_modal.sh  instructions.md  main.py  pyproject.toml  svd_instructions.md
svd_calculation/: Untitled.ipynb
