[project]
name = "svd-manifolds"
version = "0.1.0"
description = "SVD manifold analysis of LLM activations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.7.0",
    "safetensors>=0.4.0",
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "huggingface-hub>=0.23.0",
    "numpy>=1.26.0",
    "plotly>=5.20.0",
    "matplotlib>=3.8.0",
    "psutil>=5.9.0",
    "tqdm>=4.66.0",
    "modal>=0.64.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.0",
]

# ── PyTorch CUDA 12.8 source ──────────────────────────────────────────────────
[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
